add news stattus seeder and fix documation
