# internal/delivery/handlers/topic.handler.go
@@ -182,7 +182,7 @@ func (h *TopicHandler) UpdateTopic(w http.ResponseWriter, r *http.Request) {
 // @Accept  json
 // @Produce  json
 // @Param uuid path string true "Topic UUID"
-// @Success 200 {object} response.Response
+// @Success 200 {object} response.ErrorResponse "OK"
 // @Failure 400 {object} response.ErrorResponse "Bad Request"
 // @Failure 404 {object} response.ErrorResponse "Not Found"
 // @Failure 500 {object} response.ErrorResponse "Internal Server Error"
